Hero section design

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-country-flag": "^3.1.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "server-only": "^0.0.1",
+    "swiper": "^11.2.10",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
   },
